--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyPatroller.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="Enemy.hpp" />
     <ClInclude Include="EnemyPatroller.hpp" />
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="EntityManager.hpp" />
     <ClInclude Include="Grid.hpp" />
     <ClInclude Include="Player.hpp" />
   </ItemGroup>
