--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CameraAI.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="EnemyPatroller.cpp" />
     <ClCompile Include="Entity.cpp" />
@@ -141,6 +142,7 @@
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CameraAI.hpp" />
     <ClInclude Include="Enemy.hpp" />
     <ClInclude Include="EnemyPatroller.hpp" />
     <ClInclude Include="Entity.hpp" />
