--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="CameraAI.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyDogo.cpp" />
     <ClCompile Include="EnemyPatroller.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
@@ -144,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="CameraAI.hpp" />
     <ClInclude Include="Enemy.hpp" />
+    <ClInclude Include="EnemyDogo.hpp" />
     <ClInclude Include="EnemyPatroller.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="EntityManager.hpp" />
